--- a/config/2-fl.yaml
+++ b/config/2-fl.yaml
@@ -370,7 +370,7 @@ items:
                       resource: limits.memory
                 - name: TZ
                   value: Asia/Shanghai
-              image: docker.4pd.io/env/release/1.6.2-standalone/prophet/app/elf-flowengine-bundled.tar:pipe-525-commit-502b83b6
+              image: flowengine/flowengine-ui:0.0.1
               imagePullPolicy: IfNotPresent
               livenessProbe:
                 failureThreshold: 3
@@ -493,7 +493,7 @@ items:
                   value: useSSL=false&useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true&serverTimezone=GMT%2B8
                 - name: RUNNINGENV
                   value: aios
-              image: docker.4pd.io/env/release/1.6.3/prophet/app/engine-manager.tar:pipe-812-commit-171bb7e2
+              image: flowengine/engine-manager:0.0.1
               imagePullPolicy: IfNotPresent
               livenessProbe:
                 failureThreshold: 3
@@ -612,7 +612,7 @@ items:
                   value: Asia/Shanghai
                 - name: ACCESS_KEY
                   value: e5f1fc70-7d1d-4f60-9bd6-fd949078adad
-              image: docker.4pd.io/env/release/1.6.3/prophet/app/sds-workbench.tar:pipe-1327-commit-559749f7
+              image: flowengine/data:0.0.1
               imagePullPolicy: IfNotPresent
               livenessProbe:
                 failureThreshold: 3
@@ -725,7 +725,7 @@ items:
                   value: connectionCollation=utf8mb4_unicode_ci&useSSL=false&sessionVariables=time_zone%3d'%2B0%3A00'
                 - name: TZ
                   value: Asia/Shanghai
-              image: docker.4pd.io/env/release/1.6.3/prophet/app/solution-market.tar:pipe-1378-commit-fa28d23f
+              image: flowengine/hub:0.0.1
               imagePullPolicy: IfNotPresent
               livenessProbe:
                 failureThreshold: 3
