--- a/config/2-fl.yaml
+++ b/config/2-fl.yaml
@@ -43,9 +43,9 @@ items:
       application.yml: |
         app:
             db:
-                host: '10.100.124.16'
+                host: 'my-mariadb.flowengine'
                 name: 'sds'
-                password: ''
+                password: '123456'
                 port: '3306'
                 username: 'root'
             third:
@@ -155,11 +155,11 @@ items:
         server.tomcat.accesslog.rotate=true
         server.tomcat.accesslog.request-attributes-enabled=true
 
-        db.host=10.100.124.16
+        db.host=my-mariadb.flowengine
         db.port=3306
         db.name=engine-manager
         db.username=root
-        db.password=
+        db.password=123456
         db.jdbc_mysql_params=${JDBC_MYSQL_PARAMS:connectionCollation=utf8mb4_unicode_ci&useSSL=false&sessionVariables=time_zone%3d'%2B0%3A00'}
         flyway.enabled=true
         flyway.baselineOnMigrate=true
@@ -220,11 +220,11 @@ items:
         spring.http.multipart.max-request-size=100MB
 
         #数据库相关
-        db.host=10.100.124.16
+        db.host=my-mariadb.flowengine
         db.port=3306
         db.name=solution-market
         db.username=root
-        db.password=
+        db.password=123456
         spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/${db.name}?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false
         spring.datasource.username=${db.username}
         spring.datasource.password=${db.password}
